@@ -37,6 +37,7 @@ libnautilus-extension/nautilus-column.c
 libnautilus-extension/nautilus-menu-item.c
 libnautilus-extension/nautilus-property-page.c
 libnautilus-private/apps_nautilus_preferences.schemas.in
+libnautilus-private/nautilus-column-chooser.c
 libnautilus-private/nautilus-column-utilities.c
 libnautilus-private/nautilus-customization-data.c
 libnautilus-private/nautilus-desktop-directory-file.c
