@@ -1,3 +1,7 @@
+2004-02-23  Dave Camp  <dave@ximian.com>
+
+	* POTFILES.in: Added nautilus-column-chooser.c
+
 2004-02-23  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
