@@ -1,5 +1,11 @@
 2004-02-23  Dave Camp  <dave@ximian.com>
 
+	* libnautilus-private/nautilus-column-chooser.c: (add_buttons):
+	Mark strings for translation.  Patch from Luca Ferretti 
+	<elle.uca@libero.it>
+
+2004-02-23  Dave Camp  <dave@ximian.com>
+
 	* libnautilus-private/nautilus-file-private.h:
 	* libnautilus-private/nautilus-file.h:
 	* libnautilus-private/nautilus-file.c: (finalize),
